--- a/1_by_x_multiplication.tex
+++ b/1_by_x_multiplication.tex
@@ -15,7 +15,7 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.2\linewidth]{images/07_17_2022.jpg}
+    \includegraphics[width=0.2\linewidth]{images/horse.jpg}
 \end{figure}
 
 \section{Set 1}
